tryingdevToGit/force-app/main/default/objects/Concert__c/fields/Concert_Date__c.field-meta.xml
<CustomField>
    <fullName>Concert_Date__c</fullName>
    <label>Concert Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>