tryingdevToGit/force-app/main/default/objects/Concert__c/fields/Remaining_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Tickets__c</fullName>
    <formula>IF(((Tickets_Available__c -  Total_ticket_purchased__c)&gt;=0), (Tickets_Available__c -  Total_ticket_purchased__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Tickets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>