tryingdevToGit/force-app/main/default/objects/Concert__c/fields/Tickets_Available__c.field-meta.xml
<CustomField>
    <fullName>Tickets_Available__c</fullName>
    <label>Total Tickets</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>