tryingdevToGit/force-app/main/default/objects/Concert__c/fields/Total_ticket_purchased__c.field-meta.xml
<CustomField>
    <fullName>Total_ticket_purchased__c</fullName>
    <label>Total ticket purchased</label>
    <summarizedField>Tickets__c.No_of_tickets_purchased__c</summarizedField>
    <summaryForeignKey>Tickets__c.Concert__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>