tryingdevToGit/force-app/main/default/objects/Concert__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <label>Venue</label>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Concerts</relationshipLabel>
    <relationshipName>Concerts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>