tryingdevToGit/force-app/main/default/objects/Concert__c/fields/Waiting_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Tickets__c</fullName>
    <formula>IF(( Remaining_Tickets__c &lt;=0), ( Total_ticket_purchased__c -  Tickets_Available__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waiting Tickets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>